# myPong

./: CMakeLists.txt  README.md
include/gameUtils/include/: GameUtils.hpp  ball.hpp  racket.hpp  score.hpp  utils.hpp  windowProfile.hpp
include/gameUtils/src/: CMakeLists.txt  ball.cpp  racket.cpp  score.cpp  utils.cpp  windowProfile.cpp
src/: CMakeLists.txt  main.cpp
